--- a/index.html
+++ b/index.html
@@ -14,14 +14,22 @@
   <meta name="keywords" content="Krishna Palace, Hotel">
 
   <link rel="icon" type="image/png" href="./favicon.png" />
-  <link rel="stylesheet" type="text/css" href="/styles.css" />
-  <link href="https://fonts.googleapis.com/css?family=Raleway:500" rel="stylesheet">
   <title>Hotel Krishna Palace</title>
-</head>
+<link href="/bundle.css" rel="stylesheet"></head>
 
 <body>
-<p>Under Construction</p>
-  <script src="/bundle.js" type="text/javascript"></script>
-</body>
+  <div class="construction">
+    <h1>The site is currently under construction</h1>
+    <h3 class="subHead">For the time being, reach out to us at:</h3>
+    <div class="details"><b>Address:</b>&nbsp;
+      4/36, W.E.A Saraswati Marg Karolbagh, New delhi 110005.
+      <br /><b>Phone:</b>&nbsp;
+      011-45049356, 25728398, 25728399
+      9810456340,7835822751
+      <br /><b>Email:</b>&nbsp;
+      krishnapalacekb@gmail.com
+    </div>
+  </div>
+<script type="text/javascript" src="/bundle.js"></script></body>
 
 </html>
