--- a/index.html
+++ b/index.html
@@ -18,17 +18,231 @@
 <link href="/bundle.css" rel="stylesheet"></head>
 
 <body>
-  <div class="construction">
-    <h1>The site is currently under construction</h1>
-    <h3 class="subHead">For the time being, reach out to us at:</h3>
-    <div class="details"><b>Address:</b>&nbsp;
-      4/36, W.E.A Saraswati Marg Karolbagh, New delhi 110005.
-      <br /><b>Phone:</b>&nbsp;
-      011-45049356, 25728398, 25728399
-      9810456340,7835822751
-      <br /><b>Email:</b>&nbsp;
-      krishnapalacekb@gmail.com
+  <div class="app">
+    <div class="nav-bar">
+
+      <a href="#home" class="brand-logo">
+        <i class="material-icons">location_city</i>
+        <div>Krishna Palace</div>
+      </a>
+      <ul class="nav-bar__list" id="nav-list">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#rooms">ROOMS</a></li>
+        <li><a href="#services">SERVICES</a></li>
+        <li><a href="#booking">BOOKING</a></li>
+        <li><a href="#contact">CONTACT US</a></li>
+      </ul>
+      <div id="navbar__menu-button">
+        <i class="material-icons">keyboard_arrow_down</i>
+        <div>MENU</div>
+      </div>
     </div>
+    <div id="home" class="slideshow">
+      <div class="slideshow__title">
+        <div>Hotel Krishna Palace</div>
+        <div>Affordable & Luxurious</div>
+      </div>
+      <div class="my-slider">
+        <div class="first"></div>
+        <div class="second"></div>
+        <div class="third"></div>
+        <div class="fourth"></div>
+      </div>
+      <div class="prevButton navBts"><i class="material-icons">
+          navigate_before
+        </i></div>
+      <div class="nextButton navBts"><i class="material-icons">
+          navigate_next
+        </i></div>
+      <div class="navigation">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </div>
+  <div id="about">
+
+    <div class="section-body about__details container">
+      <div class="about__img"></div>
+      <div class="about__content">
+        <div class="section-title">About</div>
+        <div>
+          It gives us great pleasure to introduce <b>HOTEL KRISHNA PALACE</b>, Karol Bagh, New Delhi as the best
+          Hotel in budget category with luxurious Accommodation.<br /><br />The hotel is situated at
+          the heart of Karol Bagh area oferring you lots of choices in terms of food, travel and shopping.<br />It is
+          well connected to places such as The Airport (15 kms away), New Delhi Railway Station (4 kms) and Connaught
+          Place (3 kms)<br /><br />All our rooms offer a special touch of luxury to
+          our Guests with its well furnished modern day amenities, 32 Inches Wall Mounted LED TV, Air Conditioners and
+          other exciting facilities.
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="rooms">
+    <div class="section-title">Rooms</div>
+    <div class="section-subtitle container">We offer 24 Brand New rooms beautiful designed in western style with
+      all the modern conveniences.<br />Our large and spacious elegantly
+      furnished rooms equipped with latest technology and comfort gives an
+      ambience of luxury beautiful crafted with warmth hospitality.
+    </div>
+    <div class="rooms__body container">
+      <div class="rooms__body__room">
+        <div class="room__img1"></div>
+        <div class="room__details">
+          <div class="room__title">Super Deluxe Room</div>
+          <div class="room__body">Air-Conditioned Super Deluxe
+            Room well equipped with the latest technologies such as wall mounted LED TV, WiFi, Attached Bathroom,
+            Geyser, RO Water, Almirah, Extra Large Size and Window Facing to make your stay extra comfortable.</div>
+        </div>
+      </div>
+      <div class="rooms__body__room">
+        <div class="room__img2"></div>
+        <div class="room__details">
+          <div class="room__title">Deluxe Room</div>
+          <div class="room__body">Air-Conditioned Deluxe
+            Room well equipped with the latest technologies such as wall mounted LED TV, WiFi, Attached Bathroom,
+            Geyser, RO Water and Almirah to make your stay extra comfortable.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="gallery">
+    <img src="/images/room1.jpg"></img><img src="/images/room2.jpg"></img><img src="/images/room3.jpg"></img><img src="/images/room4.jpg"></img>
+  </div>
+  <div id="services">
+    <div class="section-title">
+      Services
+    </div>
+    <div class="section-subtitle container">
+      Need transport to explore nearby places, Want to taste the best food options or Require a doctor for an emergency
+      ?<br />
+      We provide 24 hours spontaneuous services to make your stay more comfortable.
+    </div>
+    <div class="services__details section-body container">
+      <div class="service__tag">
+        <i class="material-icons">room_service</i>
+        <span class="tag__text">Room Service</span>
+      </div>
+      <div class="service__tag">
+        <i class="material-icons">local_laundry_service</i>
+        <span class="tag__text">Laundry</span>
+      </div>
+      <div class="service__tag">
+        <i class="material-icons">local_drink</i>
+        <span class="tag__text">Tea/Coffee</span>
+      </div>
+      <div class="service__tag">
+        <i class="material-icons">fastfood</i>
+        <span class="tag__text">Food on Demand</span>
+      </div>
+      <div class="service__tag">
+        <i class="material-icons">wifi</i>
+        <span class="tag__text">WiFi Connectivity</span>
+      </div>
+      <div class="service__tag">
+        <i class="material-icons">people</i>
+        <span class="tag__text">Housekeeping</span>
+      </div>
+      <div class="service__tag">
+        <i class="material-icons">room_service</i>
+        <span class="tag__text">Doctor on Call</span>
+      </div>
+      <div class="service__tag">
+        <i class="material-icons">map</i>
+        <span class="tag__text">Travel Desk</span>
+      </div>
+      <div class="service__tag">
+        <i class="material-icons">lock</i>
+        <span class="tag__text">Locker Facility</span>
+      </div>
+    </div>
+  </div>
+  <div id="booking">
+    <div class="section-title">
+      Booking
+    </div>
+    <div class="section-subtitle container">
+      Want to make a booking for your next big trip ?<br />Fill out the form and our staff will get in touch with you.
+    </div>
+    <div class="booking__details section-body container">
+      <form id="booking-form">
+        <div class="booking-form__field">
+          <label for="b-name">Full Name</label>
+          <input id="b-name" type="text" placeholder="Enter your name" required></input>
+        </div>
+        <div class="booking-form__field">
+          <label for="b-email">Email ID</label>
+          <input id="b-email" type="email" placeholder="Enter your email id" required></input>
+        </div>
+        <div class="booking-form__field">
+          <label for="b-contact">Contact No.</label>
+          <input id="b-contact" type="number" placeholder="Enter your contact no." required></input>
+        </div>
+        <!-- <div class="booking-form__field">
+          <label for="b-address">Address</label>
+          <textarea id="b-address" type="text" placeholder="Enter your email id" required></textarea>
+        </div> -->
+        <div class="booking-form__field">
+          <label for="b-arrival-date">Arrival & Departure Dates</label>
+          <input id="b-arrival-date" type="date" required></input>
+          <input id="b-departure-date" type="date" required></input>
+        </div>
+        <div class="booking-form__field">
+          <label for="b-persons">Room Type</label>
+          <select>
+            <option>Any</option>
+            <option>Super Deluxe Room</option>
+            <option>Deluxe Room</option>
+          </select>
+        </div>
+        <div class="booking-form__field">
+          <label for="b-persons">Total no. of rooms</label>
+          <input id="b-persons" type="number" placeholder="Enter the no. of rooms required" required></input>
+        </div>
+        <div class="booking-form__field">
+          <label for="b-message">Message</label>
+          <textarea id="b-message" type="number" placeholder="Your message..."></textarea>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </div>
+  <div id="contact">
+    <div class="section-title">
+      Contact Us
+    </div>
+    <div class="section-subtitle container">
+      Want to enquire about something or find out where we are located ?<br />Reach out to us.
+
+    </div>
+    <div class="contact__details section-body">
+      <div class="contact__section">
+        <div class="contact__info">
+          <div class="contact__info__header"><i class="material-icons">home</i>Address</div>
+          <div class="contact__info__details">4/36, W.E.A Saraswati Marg, Karol Bagh, New Delhi, Delhi - 110005.</div>
+        </div>
+        <div class="contact__info">
+          <div class="contact__info__header"><i class="material-icons">phone</i>Phone No.</div>
+          <div class="contact__info__details">Landline: 011-45049356, 25728398, 25728399<br />Mobile:
+            9810456340,7835822751
+          </div>
+        </div>
+        <div class="contact__info">
+          <div class="contact__info__header"><i class="material-icons">email</i>Email</div>
+          <div class="contact__info__details">krishnapalacekb@gmail.com</div>
+          <div class="contact__info__details">sandeep@krishnapalace.co.in</div>
+        </div>
+      </div>
+      <div class="contact__map"></div>
+    </div>
+  </div>
+  <div class="foot-section">
+    Hotel Krishna Palace Copyright &copy; 2019. Developed by <a href="https://akshitsehgal.com" target="_blank">Akshit
+      Sehgal</a>
+  </div>
   </div>
 <script type="text/javascript" src="/bundle.js"></script></body>
 
