Updated Emails and Maps Url

--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
         <div class="contact__info">
           <div class="contact__info__header"><i class="material-icons">email</i>Email</div>
           <div class="contact__info__details">krishnapalacekb@gmail.com</div>
-          <div class="contact__info__details">sandeep@krishnapalace.co.in</div>
+          <div class="contact__info__details">info@krishnapalace.co.in</div>
         </div>
       </div>
-      <div class="contact__map"></div>
+      <div class="contact__map" id="mapView"></div>
     </div>
   </div>
   <div class="foot-section">
